# GHL_API

./: .env.example  .gitignore  CLAUDE.md  DATA_RULES.md  README.md  SETUP_NEW_MACHINE.md  pyproject.toml
dashboard/: _db.py  app.py
dashboard/pages/: 1_Funnel.py  2_Agents.py  3_Engagement.py  4_Tags.py  5_Pipelines.py
data/: .gitignore
scripts/: audit_csv.py  dashboard_queries.py  export_to_csv.py  load_to_sql.py  poc_exec_summary.py  poc_funnel.py  poc_pipeline_health.py  poc_response_time.py  poc_tag_engagement.py  poc_tag_taxonomy.py  preview_csv.py  probe_rate_limit.py  probe_supp_endpoints.py  pull_custom_fields.py  pull_supp_dims.py  pull_users_by_id.py  refresh_daily.py  run_batch.py  smoke_mcp.py  smoke_test.py  smoke_views.py  test_resources.py  verify_sql_connection.py
sql/: build_contact_tags.sql  create_tables.sql
sql/views/: vw_ActivityDecay.sql  vw_AgentLeaderboard.sql  vw_DailyLeadFunnel.sql  vw_FunnelCohort.sql  vw_LeadSourceROI.sql  vw_MessageHeatmap.sql  vw_ResponseTime.sql  vw_TagEngagement.sql
src/dcr_mcp/: __init__.py  config.py  db.py  schema.py  server.py
src/dcr_mcp/tools/: __init__.py  analytics.py  base.py  contacts.py  conversations.py  opportunities.py
src/ghl_api/: __init__.py  alerts.py  auth.py  batch.py  client.py  exceptions.py  manifest.py  mappers.py  sanitize.py  throttle.py
src/ghl_api/resources/: _base.py  calendars.py  contacts.py  conversations.py  custom_fields.py  (+3 more)
tests/: test_alerts.py  test_batch.py  test_client.py  test_dcr_mcp.py  test_manifest.py  test_mappers.py  test_sanitize.py  test_throttle.py
