[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghl-api"
version = "0.0.1"
description = "Python client for the GoHighLevel (LeadConnector) API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "vjpovlitz" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ghl_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
